--- a/Clean-Reader/Theme/Dark.xaml
+++ b/Clean-Reader/Theme/Dark.xaml
@@ -2,12 +2,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Clean_Reader.Theme">
-    <AcrylicBrush x:Key="SideBackground" BackgroundSource="HostBackdrop" TintColor="#252a40" FallbackColor="#282828" TintOpacity="0.7"/>
-    <AcrylicBrush x:Key="PaneBackground" BackgroundSource="Backdrop" TintColor="#252a40" FallbackColor="#282828" TintOpacity="0.9"/>
-    <AcrylicBrush x:Key="PopupBackground" BackgroundSource="Backdrop" TintColor="#252a40" FallbackColor="#1C1C1C" TintOpacity="0.8"/>
-    <AcrylicBrush x:Key="CoverBackground" BackgroundSource="Backdrop" TintColor="#252a40" FallbackColor="#1C1C1C" TintOpacity="0.6"/>
+    <AcrylicBrush x:Key="SideBackground" BackgroundSource="HostBackdrop" TintColor="#171922" FallbackColor="#171922" TintOpacity="0.7"/>
+    <AcrylicBrush x:Key="PaneBackground" BackgroundSource="Backdrop" TintColor="#171922" FallbackColor="#171922" TintOpacity="0.9"/>
+    <AcrylicBrush x:Key="PopupBackground" BackgroundSource="Backdrop" TintColor="#171922" FallbackColor="#1C1C1C" TintOpacity="0.8"/>
+    <AcrylicBrush x:Key="CoverBackground" BackgroundSource="Backdrop" TintColor="#171922" FallbackColor="#1C1C1C" TintOpacity="0.6"/>
     <SolidColorBrush x:Key="MaskBackground" Color="#282828" Opacity="0.6"/>
-    <AcrylicBrush x:Key="PageBackground" BackgroundSource="HostBackdrop" TintColor="#252a40" FallbackColor="#282828" TintOpacity="0.7"/>
+    <SolidColorBrush x:Key="PageBackground" Color="#171922"/>
     <SolidColorBrush x:Key="PageOverBackground" Color="#0D0D0D"/>
     <SolidColorBrush x:Key="CardBackground" Color="#3a3f53"/>
     <SolidColorBrush x:Key="CardBackgroundOver" Color="#2E3242"/>
@@ -25,15 +25,10 @@
     <SolidColorBrush x:Key="ProgressColorOver" Color="#252a40" Opacity="0.7"/>
     <Color x:Key="ShadowColor">#111111</Color>
 
-    <SolidColorBrush x:Key="PrimaryColorOpacity" Color="#b563d2" Opacity="0.1"/>
-    <LinearGradientBrush x:Key="PrimaryColor" StartPoint="0,0" EndPoint="1,1">
-        <GradientStopCollection>
-            <GradientStop Color="#b563d2" Offset="0"/>
-            <GradientStop Color="#6b3fbe" Offset="1"/>
-        </GradientStopCollection>
-    </LinearGradientBrush>
-    <SolidColorBrush x:Key="PrimaryColorDown" Color="#5D568C"/>
-    <SolidColorBrush x:Key="PrimaryColorOver" Color="#7E4AE0"/>
+    <SolidColorBrush x:Key="PrimaryColorOpacity" Color="#156FB2" Opacity="0.1"/>
+    <SolidColorBrush x:Key="PrimaryColor" Color="#89BAF0"/>
+    <SolidColorBrush x:Key="PrimaryColorDown" Color="#156FB2"/>
+    <SolidColorBrush x:Key="PrimaryColorOver" Color="#6BA5F0"/>
     <SolidColorBrush x:Key="SecondaryColorOpacity" Color="#F7BA71" Opacity="0.2"/>
     <LinearGradientBrush x:Key="SecondaryColor" StartPoint="0,0" EndPoint="1,1">
         <GradientStopCollection>
