--- a/Clean-Reader/Pages/ShelfPage.xaml
+++ b/Clean-Reader/Pages/ShelfPage.xaml
@@ -66,7 +66,7 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Style="{StaticResource SubtitleTextStyle}" VerticalAlignment="Center" x:Name="ShelfNameBlock"
-                           Text="全部书籍" HorizontalAlignment="Left"/>
+                           HorizontalAlignment="Left"/>
                 <interaction:ActionButton Grid.Column="1" Style="{StaticResource DefaultActionButtonStyle}"
                                           x:Name="ShelfButton" Flyout="{StaticResource ShelfFlyout}">
                     <interaction:ActionButton.Icon>
